# pbi_scripts

./: .gitignore
.github/workflows/: update_database.yml
Scripts/: pyproject.toml
Scripts/src/databaseupdate/: databaseupdate.py  requirements.txt
Scripts/src/pbi_versioncontrol/: previous_flagged_data.py  stale_dataset.py  stale_sensor.py  validation.py
Scripts/src/pbi_versioncontrol/data/: configuration.json
